# polyfarm

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml
.github/: copilot-instructions.md
bruno/: bruno.json
bruno/Moonraker/: Status.bru  folder.bru
bruno/PrusaLink/: Info.bru  folder.bru
src/: manage.py
src/bblb/: apps.py  handler.py  models.py
src/farm/: admin.py  models.py  views.py
src/farm/components/: handler_select.py  printer_card.py  printer_create_form.py  printer_list_item.py
src/farm/migrations/: 0001_initial.py  0002_remove_printer_farm_printe_handler_974661_idx_and_more.py  0003_client_order_task_job.py
src/farm/templates/farm/: printer_list.html
src/farm/templates/unicorn/: handler_select.html  printer_card.html  printer_create_form.html  printer_list_item.html
src/mnrkr/: admin.py  apps.py  forms.py  handler.py  models.py
src/mnrkr/migrations/: 0001_initial.py
src/mnrkr/templates/mnrkr/: create.html
src/polyfarm/: asgi.py  settings.py  urls.py  wsgi.py
src/polyfarm/helpers/: __init__.py  handlers.py  models.py
src/polyfarm/templates/: base.html
src/prslnk/: admin.py  apps.py  forms.py  handler.py  models.py
src/prslnk/migrations/: 0001_initial.py  0002_prusalinkprinterinfomodel.py  0003_alter_prusalinkprinterinfomodel_options.py
