[tool.ruff]
line-length = 100
ignore = ["D203"]
target-version = "py313"
exclude = ["**/migrations/**"]

[tool.black]
line-length = 100
target-version = ['py313']
extend-exclude = '''
# Used for black normally
(
    .*/migrations/*
)
'''
force-exclude = '''
# Used for precommit
(
    .*/migrations/*
)
'''

[project]
name = "polyfarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-environ>=0.12.0",
    "django-unicorn>=0.62.0",
    "pyprusalink>=2.1.1",
    "python-benedict[parse]>=0.34.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = ["djlint>=1.36.4", "pre-commit>=4.2.0"]
